@@ -2,6 +2,8 @@
 use strict;
 use warnings;
 use ExtUtils::MakeMaker;
+
+my $github_slug = 'acme/archive-peek';
 WriteMakefile(
     NAME         => 'Archive::Peek',
     VERSION_FROM => 'lib/Archive/Peek.pm',
@@ -22,7 +24,12 @@ WriteMakefile(
     META_MERGE   => {
         "meta-spec" => { version => 2 },
         resources => {
-            repository => 'https://github.com/acme/archive-peek',
+            bugtracker  => { web => "https://github.com/$github_slug/issues" },
+            repository  => {
+                url => "git://github.com/$github_slug.git",
+                type => 'git',
+                web => "https://github.com/$github_slug",
+            },
         },
         prereqs => {
             develop => {
